TC06-11: Contact form, products, search, cart, checkout, invoice
Co-authored-by: Cursor <cursoragent@cursor.com>